Finalização do cadastro cliente.
