# src/routes/cliente.route.js
@@ -31,6 +31,27 @@ router.post('/clientes', function (req, res) {
     */
     clienteController.create(req, res);
 });
+router.get('/clientes', function (req, res) {
+    /*
+      #swagger.tags = ['Cliente']
+      #swagger.description = 'Escolha apenas um parâmetro, para listar todos os registros não informe nenhuma parâmentro.'
+      #swagger.parameters['id'] = { description: 'Identificador do Cliente' }
+      #swagger.parameters['nome'] = { description: 'Nome do cliente' }
+      #swagger.parameters['telefone'] = { description: 'Telefone do cliente' }
+      #swagger.parameters['email'] = { description: 'Email do cliente' }
+      #swagger.parameters['cpf'] = { description: 'CPF do cliente' }
+      #swagger.responses[200] = {
+        description: 'Cliente encontrado.'
+      }
+      #swagger.responses[404] = {
+        description: 'Cliente não encontrado!'
+      }
+      #swagger.responses[500] = {
+        description: 'Erro interno'
+      }
+    */
+    clienteController.find(req, res);
+});
 router.put('/clientes/:id', function (req, res) {
     /*
     #swagger.tags = ['Cliente']
@@ -63,7 +84,7 @@ router.put('/clientes/:id', function (req, res) {
   */
     clienteController.update(req, res);
 });
-router["delete"]('/clientes/:id', function (req, res) {
+router["delete"]('/clientes', function (req, res) {
     /*
       #swagger.tags = ['Cliente']
       #swagger.description = 'Exclui dados do cliente.'
@@ -80,15 +101,12 @@ router["delete"]('/clientes/:id', function (req, res) {
     */
     clienteController["delete"](req, res);
 });
-router.patch('/clientes/:id/:status?', function (req, res) {
+router.patch('/clientes/:id/:status', function (req, res) {
     /*
      #swagger.tags = ['Cliente']
      #swagger.description = 'Alterar status do cliente.'
-     #swagger.parameters['status'] = {
-       in: 'body',
-       description: 'Status',
-       schema: {$status: 'ATIVO' ou 'SUSPENSO' ou 'INATIVO'}
-     }
+     #swagger.parameters['id'] = { description: 'Identificador do Cliente' }
+     #swagger.parameters['status'] = { description: 'ATIVO ou SUSPENSO ou INATIVO' }
      #swagger.responses[200] = {
        description: 'Status modificado.'
      }
@@ -100,25 +118,5 @@ router.patch('/clientes/:id/:status?', function (req, res) {
      }
    */
     clienteController.updateStatus(req, res);
-});
-router.get('/clientes/:id?', function (req, res) {
-    /*
-      #swagger.tags = ['Cliente']
-      #swagger.description = 'Escolha apenas um parâmetro.'
-      #swagger.parameters['nome'] = { description: 'Nome do cliente' }
-      #swagger.parameters['telefone'] = { description: 'Telefone do cliente' }
-      #swagger.parameters['email'] = { description: 'Email do cliente' }
-      #swagger.parameters['cpf'] = { description: 'CPF do cliente' }
-      #swagger.responses[200] = {
-        description: 'Cliente encontrado.'
-      }
-      #swagger.responses[404] = {
-        description: 'Cliente não encontrado!'
-      }
-      #swagger.responses[500] = {
-        description: 'Erro interno'
-      }
-    */
-    clienteController.find(req, res);
 });
 exports["default"] = router;
