# swagger.json
@@ -5,7 +5,7 @@
     "title": "Medicar Saúde",
     "description": "Cooperativa de Saúde"
   },
-  "host": "localhost:3000/api",
+  "host": "http://localhost:3000/api",
   "basePath": "/",
   "schemes": [
     "http"
@@ -79,6 +79,55 @@
         "responses": {
           "201": {
             "description": "Criado com sucesso."
+          },
+          "500": {
+            "description": "Erro interno"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Cliente"
+        ],
+        "description": "Escolha apenas um parâmetro, para listar todos os registros não informe nenhuma parâmentro.",
+        "parameters": [
+          {
+            "name": "id",
+            "description": "Identificador do Cliente",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "nome",
+            "description": "Nome do cliente",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "telefone",
+            "description": "Telefone do cliente",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "email",
+            "description": "Email do cliente",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "cpf",
+            "description": "CPF do cliente",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Cliente encontrado."
+          },
+          "404": {
+            "description": "Cliente não encontrado!"
           },
           "500": {
             "description": "Erro interno"
@@ -174,7 +223,9 @@
             "description": "Erro interno"
           }
         }
-      },
+      }
+    },
+    "/clientes/{id}/{status}": {
       "patch": {
         "tags": [
           "Cliente"
@@ -185,63 +236,20 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "Identificador do Cliente"
+          },
+          {
+            "name": "status",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ATIVO ou SUSPENSO ou INATIVO"
           }
         ],
         "responses": {
           "200": {
             "description": "Status modificado."
-          },
-          "404": {
-            "description": "Cliente não encontrado!"
-          },
-          "500": {
-            "description": "Erro interno"
-          }
-        }
-      }
-    },
-    "/clientes/{id?}": {
-      "get": {
-        "tags": [
-          "Cliente"
-        ],
-        "description": "Escolha apenas um parâmetro.",
-        "parameters": [
-          {
-            "name": "id?",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "nome",
-            "description": "Nome do cliente",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "telefone",
-            "description": "Telefone do cliente",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "email",
-            "description": "Email do cliente",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "cpf",
-            "description": "CPF do cliente",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Cliente encontrado."
           },
           "404": {
             "description": "Cliente não encontrado!"
